--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,6 +37,7 @@ dependencies:
   flutter_colorpicker: ^1.1.0
   animated_reorderable_list: ^1.3.0
   flutter_reorderable_list: ^1.3.1
+  lottie: ^3.3.1
 
 
 dev_dependencies:
